@@ -1,7 +1,7 @@
 package com.graphinout.reader.example;
 
 import com.graphinout.base.AbstractReaderTest;
-import com.graphinout.base.GioReader;
+import com.graphinout.base.gio.GioReader;
 
 import java.util.Arrays;
 import java.util.List;
@@ -10,7 +10,7 @@ class ExampleReaderTest extends AbstractReaderTest {
 
     @Override
     protected List<GioReader> readersToTest() {
-        return Arrays.asList(new ExampleReader());
+        return List.of(new ExampleReader());
     }
 
 }
